@@ -71,6 +71,23 @@
                         --add-opens java.base/java.lang=ALL-UNNAMED
                         -Dallure.results.directory=target/allure-results
                     </argLine>
+                    <properties>
+                        <property>
+                            <name>listener</name>
+                            <value>io.qameta.allure.junitplatform.AllureJunitPlatform</value>
+                        </property>
+                    </properties>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.1.2</version>
+                <configuration>
+                    <argLine>
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                        -Dallure.results.directory=target/allure-results
+                    </argLine>
                 </configuration>
             </plugin>
 
